--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
+    "react-rnd": "^10.4.12",
     "react-router-dom": "^6.24.1",
     "tw-elements-react": "^1.0.0-alpha-end"
   },
