--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-redux": "^9.1.2",
     "react-rnd": "^10.4.12",
     "react-router-dom": "^6.24.1",
-    "tw-elements-react": "^1.0.0-alpha-end"
+    "tw-elements-react": "^1.0.0-alpha-end",
+    "unsplash-js": "^7.0.19"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
