--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "unsplash-js": "^7.0.19"
   },
   "devDependencies": {
+    "@iconify-icon/react": "^2.1.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
