--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@react-pdf/renderer": "^3.4.4",
     "@reduxjs/toolkit": "^2.2.6",
     "axios": "^1.7.2",
+    "canvas": "^2.11.2",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "pspdfkit": "^2024.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-rnd": "^10.4.12",
