--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.2",
     "canvas": "^2.11.2",
     "formik": "^2.4.6",
+    "gsap": "^3.12.5",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "pspdfkit": "^2024.4.0",
@@ -25,6 +26,7 @@
     "react-redux": "^9.1.2",
     "react-rnd": "^10.4.12",
     "react-router-dom": "^6.24.1",
+    "sheryjs": "^1.0.0-beta.0.1.8",
     "tw-elements-react": "^1.0.0-alpha-end",
     "unsplash-js": "^7.0.19",
     "yup": "^1.4.0"
