--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-redux": "^9.1.2",
     "react-rnd": "^10.4.12",
     "react-router-dom": "^6.24.1",
+    "react-toastify": "^10.0.6",
     "sheryjs": "^1.0.0-beta.0.1.8",
     "swiper": "^11.1.14",
     "tw-elements-react": "^1.0.0-alpha-end",
