--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "canvas": "^2.11.2",
     "formik": "^2.4.6",
     "gsap": "^3.12.5",
+    "html-react-parser": "^5.2.2",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "pspdfkit": "^2024.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-grid-layout": "^1.5.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
@@ -39,6 +41,7 @@
     "@iconify-icon/react": "^2.1.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-grid-layout": "^1.3.5",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
     "@vitejs/plugin-react": "^4.3.1",
